--- a/webpage.html
+++ b/webpage.html
@@ -10,7 +10,7 @@ body {background-color:black}
 </head>
 <body>
 
-  <title>Houston Track & Feild</title> 
+  <title>Houston Track & Field</title> 
     <IMG SRC="http://grfx.cstv.com/schools/hou/graphics/ot/facilities/yeoman-header.jpg" ALT=WIDTH=300 HEIGHT=250>
   
   <h1>2015/2016 Schedule</h1>
