--- a/webpage.html
+++ b/webpage.html
@@ -1,12 +1,6 @@
 <html>
 <head>
-  
-<style>
-body {background-color:black}
-  h1   {color:blue}
-  p    {color:white}
-</style> 
-  
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
