css changes added comments added image

--- a/webpage.html
+++ b/webpage.html
@@ -5,15 +5,18 @@
 <body>
 
   <title>Houston Track & Field</title> 
-    <IMG SRC="http://grfx.cstv.com/schools/hou/graphics/ot/facilities/yeoman-header.jpg" ALT=WIDTH=300 HEIGHT=250>
+  
+  <!-- header picture-->
+    <IMG SRC="yeoman-header.jpg" ALT=WIDTH=300 HEIGHT=250> 
   
   <h1>2015/2016 Schedule</h1>
   <h2> roster </h2>
     <ul>
-      <li>Women</li><a href="Girls Roster.docx">Current Roster</a>
-      <li>Men</li>
+      <li1>Men and Women Current roster</li1><br>
+<a href="http://www.uhcougars.com/sports/c-track/c-track-roster-mtt.html">Current Roster</a> <!-- this will be a picture from something-->
+      <li>something else</li>
     </ul>
-  <h3></h3> 
+  <h3></h3>
   
 <p> Upcoming events for the season/ things to look forward to/ NEW TRACK!</p>
 
